Hide overflow, temp fix break page

--- a/tlcn3-app/src/app/page-editor/page-editor.component.scss
+++ b/tlcn3-app/src/app/page-editor/page-editor.component.scss
@@ -24,7 +24,7 @@
         box-shadow: 30px 30px #494747;
         padding: 1cm;
         font-family: Roboto, Helvetica, sans-serif;
-
+        overflow: hidden;
         h2,
         h5 {
           margin: 0px;
